<resources>
    <string name="app_name">TB Guide</string>
    <string name="bookmark_confirm_deletion">Are you sure you want to remove %s from you bookmarks ?</string>
    <string name="bookmark_deleted">%s has been removed from your bookmarks.</string>
    <string name="bookmark_updated">Bookmark has been updated.</string>
    <string name="bookmark_saved">Bookmark saved</string>
    <string name="bookmark_add">Add Bookmark</string>
    <string name="bookmark_title_required">Title is required.</string>

    <string name="notes_count">My Notes (%d)</string>
    <string name="note_saved">Note saved.</string>
    <string name="submit_note">Submit note as feedback to the Content Editing Team</string>
    <string name="notes_1_">Notes (1)</string>
    <string name="note_deleted">Note deleted.</string>
    <string name="note_updated">Note has been updated.</string>
    <string name="note_enter_to_save_prompt">Please enter notes to save.</string>
    <string name="note_confirm_deletion">Are you sure you want to delete this note ?</string>
    <string name="note_enter_to_update_prompt">Please enter notes to update.</string>

    <string name="dynamic_link_generation">Generating link, please wait …</string>
    <string name="dynamic_link_failed_to_generate">Failed to create link, please try again.</string>
    <string name="view_in_chapter">View in chapter</string>
    <string name="view_in_cha">View in Chapter -> %s</string>

    <string name="delete">Delete</string>
    <string name="update">Update</string>
    <string name="share">Share</string>
    <string name="undo">Undo</string>
    <string name="bookmark">Bookmark</string>
    <string name="bookmarked">Bookmarked</string>
    <string name="note">Note</string>
    <string name="edit_concat">Edit %s</string>

    <string name="open_link_in_browser">Open link in browser ?</string>
    <string name="last_updated">Updated %s</string>


    <!-- Privacy Policy Preferences -->
    <string name="privacy_policy_key">privacy_policy_key</string>
    <string name="privacy_policy">Legal</string>


    <!-- About Us Preferences -->
    <string name="about_us_key">about_us_key</string>
    <string name="about_us">About Us</string>

    <!-- About Us Preferences -->
    <string name="contact_us_key">contact_us_key</string>
    <string name="contact_us">Contact Us</string>

    <!-- Theme Preferences -->
    <string name="theme_key">theme_key</string>
    <string name="theme">Theme</string>

    <!-- Font Preferences -->
    <string name="font_key">font_key</string>
    <string name="font">Font</string>

    <!-- Reset Preferences -->
    <string name="reset_key">reset_key</string>
    <string name="reset_title">Clear App Content</string>
    <string name="reset_summary">Reset all app data and start all over again</string>
    <string name="home">Home</string>
    <string name="font_size_settings">Font Size Settings</string>
    <string name="font_size">Font Size:</string>
    <string name="font_size_small">Font Size: Small</string>
    <string name="font_size_normal">Font Size: Normal</string>
    <string name="font_size_large">Font Size: Large</string>
    <string name="font_size_larger">Font Size: Larger</string>
    <string name="slider_small_font_icon">Slider Small Font Icon</string>
    <string name="slider_large_font_icon">Slider Large Font Icon</string>
    <string name="you_may_want_to_search_for">You may want to search for</string>
    <string name="regimens">Regimens</string>
    <string name="pregnancy">Pregnancy</string>
    <string name="rifampin">Rifampin</string>
    <string name="recent">Recent</string>
    <string name="update_card_message">Fresh updates are ready for you! Please download the latest content to continue enjoying the app.</string>
    <string name="new_content_available">New Content Available</string>
    <string name="download_now">Download Now</string>
    <string name="guide">Guide</string>
    <string name="bookmarked_message">Bookmarked! Now you can quickly access this content through <font color="@color/reddish">My Bookmarks</font> on <font color="@color/reddish">Home</font> page</string>
    <string name="thank_you_note">Thank you for your valuable feedback! If you want to get follow-ups on this feedback, Please go to <font color="#5182FF">Contact Us</font> on <font color="#5182FF">Settings</font> page</string>
    <string name="state_guide">State guidelines have changed for LTBI Treatment</string>
    <string name="note_last_e">Note - Last Edited 03/12/2024</string>
    <string name="treatment_r">Treatment Regimens</string>
    <string name="iii_treatme">III. Treatment of Latent TB Infection (LTBI)</string>
    <string name="firstline">FirstLine</string>
    <string name="first_line_">First Line TB Drugs for Adults</string>
    <string name="bookmark_na">Bookmark Name</string>
    <string name="bookmark_so">Bookmark Source</string>
    <string name="bookmark_tr">Bookmark %1$s Deleted!</string>
    <string name="edit_note">Edit Note</string>
    <string name="delete_this_note">Delete this note?</string>
    <string name="search_counter_placeholder">%d/%d</string>
    <string name="add_new_note">Add New Note</string>
    <string name="enter_notes">Enter notes ...</string>
    <string name="add_a_tag">Add a Tag</string>
    <string name="show_notes">Show Notes</string>
    <string name="enter_keywords_to_search">Enter Keywords to Search</string>
    <string name="_2_3">2/3</string>

    <!-- TODO: Remove or change this placeholder text -->


</resources>