<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <!-- <PreferenceCategory
        app:iconSpaceReserved="false"
        app:layout="@layout/preference_category_custom"
        app:title="In-Chapter Accessibility">

        <Preference
            android:key="@string/font_key"
            android:title="Font Size"
            android:layout="@layout/preference_item_custom"
            app:iconSpaceReserved="false" />

    </PreferenceCategory> -->

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:layout="@layout/preference_category_custom"
        app:title="More">

        <SwitchPreference
            android:defaultValue="false"
            android:key="dark_mode_key"
            android:title="Dark Mode"
            android:layout="@layout/preference_switch_no_chevron"
            app:iconSpaceReserved="false" />

        <Preference
            app:iconSpaceReserved="false"
            app:key="@string/contact_us_key"
            android:layout="@layout/preference_item_custom"
            app:title="Contact Us" />

<!--        <Preference-->
<!--            app:iconSpaceReserved="false"-->
<!--            app:key="give_feedback_key"-->
<!--            android:layout="@layout/preference_item_custom"-->
<!--            app:title="Give Feedback" />-->

        <Preference
            app:iconSpaceReserved="false"
            app:key="@string/privacy_policy_key"
            android:layout="@layout/preference_item_custom"
            app:title="Legal" />

        <Preference
            app:iconSpaceReserved="false"
            app:key="@string/about_us_key"
            android:layout="@layout/preference_item_custom"
            app:title="About" />

    </PreferenceCategory>


    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:layout="@layout/preference_category_custom"
        app:title="Reset">

        <Preference
            app:iconSpaceReserved="false"
            app:key="@string/reset_key"
            android:layout="@layout/preference_item_no_chevron"
            app:title="Clear App Content" />

    </PreferenceCategory>

</PreferenceScreen>