<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="16dp">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/font_size_settings"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_gravity="center_vertical" />

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/close_dialog_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_baseline_close" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingVertical="20dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingHorizontal="10dp"
                android:contentDescription="@string/slider_small_font_icon"
                android:src="@drawable/ic_small_font" />

            <!--Slider-->
            <com.google.android.material.slider.Slider
                android:id="@+id/font_size_slider"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                app:thumbColor="@color/white"
                app:thumbRadius="13dp"
                app:thumbElevation="3dp"
                android:valueFrom="100"
                android:valueTo="175"
                android:stepSize="25"
                app:labelBehavior="gone" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingHorizontal="10dp"
                android:contentDescription="@string/slider_large_font_icon"
                android:src="@drawable/ic_large_font" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/font_size_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/font_size"
            android:textSize="20sp"
            android:textStyle="bold" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.appcompat.widget.LinearLayoutCompat>