<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.GlobalSearchFragment">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/linearLayoutCompat3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="@drawable/search_view_background"
            android:clipToOutline="true"
            android:paddingStart="24dp"
            android:paddingTop="10dp"
            android:paddingEnd="24dp"
            android:paddingBottom="20dp">

            <EditText
                android:id="@+id/searchKeyword"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_alignParentStart="true"
                android:background="@drawable/search_input_background"
                android:drawableStart="@drawable/ic_baseline_search_24"
                android:drawablePadding="10dp"
                android:hint="Enter Keywords to Search"
                android:imeOptions="actionSearch"
                android:inputType="text"
                android:maxLines="1"
                android:paddingStart="9dp"
                android:paddingEnd="40dp"
                android:textColor="#000000"
                android:textColorHint="#666666"
                android:textSize="16sp" />

            <FrameLayout
                android:id="@+id/clearSearchHolder"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/searchKeyword"
                android:layout_alignEnd="@id/searchKeyword"
                android:layout_alignBottom="@id/searchKeyword"
                android:layout_marginEnd="12dp">

                <ImageView
                    android:id="@+id/clearSearch"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="center"
                    android:scaleType="centerInside"
                    android:src="@drawable/ic_baseline_clear_content"
                    android:tint="@color/reddish"
                    android:visibility="gone" />
            </FrameLayout>


        </RelativeLayout>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <ImageView
        android:id="@+id/search_progress_bar"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:src="@drawable/ic_baseline_loading"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/tabLayoutContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginStart="0dp"
        android:layout_marginBottom="0dp"
        android:layout_marginEnd="3dp"
        android:paddingStart="24dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutCompat3">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/search_item_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_marginBottom="0dp"
            android:layout_marginEnd="8dp"
            android:paddingHorizontal="0dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/tabLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Displaying 90 items" />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:tag="?colorBlackWhite"
            android:visibility="gone"
            android:background="@android:color/transparent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/search_item_count"
            app:layout_constraintTop_toTopOf="parent"
            app:tabGravity="fill"
            app:tabIndicatorHeight="0dp"
            app:tabMaxWidth="0dp"
            app:tabMode="fixed" />


    </androidx.constraintlayout.widget.ConstraintLayout>


    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="24dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tabLayoutContainer" />

    <ImageView
        android:id="@+id/loadingIndicator"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:src="@drawable/ic_baseline_loading"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view2" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:scrollbars="vertical"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tabLayoutContainer"
        tools:itemCount="5"
        tools:listitem="@layout/fragment_global_search_item" />


    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/suggested_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:orientation="vertical"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view2">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/recent_title"
            style="@style/subtitle1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="25dp"
            android:text="@string/recent"
            android:visibility="gone" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recent_recyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="35dp"
            android:visibility="gone"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:spanCount="2"
            tools:itemCount="3"
            tools:listitem="@layout/fragment_search_recent_item" />

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/subtitle1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="20dp"
            android:text="@string/you_may_want_to_search_for" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/regimens"
            style="@style/body2Regular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:drawableStart="@drawable/ic_baseline_search_24"
            android:drawablePadding="5dp"
            android:gravity="center_vertical"
            android:text="@string/regimens" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/pregnancy"
            style="@style/body2Regular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:drawableStart="@drawable/ic_baseline_search_24"
            android:drawablePadding="5dp"
            android:gravity="center_vertical"
            android:text="@string/pregnancy" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/rifampin"
            style="@style/body2Regular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:drawableStart="@drawable/ic_baseline_search_24"
            android:drawablePadding="5dp"
            android:gravity="center_vertical"
            android:text="@string/rifampin" />

    </androidx.appcompat.widget.LinearLayoutCompat>


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/no_item_found"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="No match found."
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view2"
        tools:ignore="HardcodedText" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/visible_view_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view2" />


</androidx.constraintlayout.widget.ConstraintLayout>
